--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Polvori",
+  "name": "polvori",
   "author": "Albert Olive <albertolivecorbella@gmail.com>",
   "private": "true",
   "devDependencies": {},
@@ -8,7 +8,8 @@
     "angular": "~1.4.3",
     "ngCordova": "~0.1.17-alpha",
     "angular-resource": "~1.4.3",
-    "lodash": "~3.10.0"
+    "lodash": "~3.10.0",
+    "angular-translate": "~2.7.2"
   },
   "resolutions": {
     "angular": "1.4.3"
